fixed extra space on top for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3474,7 +3474,7 @@ input, select, textarea {
 
 			#intro {
 				padding: 3rem 2rem 1rem 2rem ;
-				min-height: 80vh;
+				min-height: 45vh;
 			}
 
 				#intro h1 {
